# CS149-21fall

./: .gitignore  .gitmodules  README.md
programming-assignments-23fall/asst1/common/: tasksys.cpp
programming-assignments-23fall/asst1/prog1_mandelbrot_threads/: README.md  mandelbrotSerial.cpp  mandelbrotThread.cpp
programming-assignments-23fall/asst1/prog2_vecintrin/: main.cpp
programming-assignments-23fall/asst1/prog4_sqrt/: README.md  main.cpp  sqrtSerialAVX2.h
programming-assignments-23fall/asst2/part_a/: tasksys.cpp  tasksys.h
programming-assignments-23fall/asst2/part_b/: Makefile  tasksys.cpp  tasksys.h
programming-assignments-23fall/asst3/render/: cudaRenderer.cu
programming-assignments-23fall/asst3/saxpy/: saxpy.cu
programming-assignments-23fall/asst3/scan/: main.cpp  scan.cu  scan_ref.cu
programming-assignments-23fall/asst4/: gpt149.py  module.cpp  pyproject.toml
programming-assignments-24fall/asst1/prog1_mandelbrot_threads/: README.md  mandelbrotThread.cpp
programming-assignments-24fall/asst1/prog2_vecintrin/: main.cpp
programming-assignments-24fall/asst1/prog5_saxpy/: README.md  main.cpp
written-assigment/write1/: README.md
written-assigment/write2/: README.md
